--- a/studentreviews.html
+++ b/studentreviews.html
@@ -74,7 +74,7 @@
             I will definitely suggest for this course because it's worthy</p>
     </div>
     <div class="box">
-        <img src="./student2.png" alt="Student 2">
+        <img src="./Student2.png" alt="Student 2">
         <h2>Ektha Giridar</h2>
         <p>R. K. S. D college</p>
         <p>Getting Enrolled in tap academy is one my best
@@ -87,7 +87,7 @@
             getting a job because after 2 months with tap academy I am getting various offers.</p>
     </div>
     <div class="box">
-        <img src="./student3.png" alt="Student 3">
+        <img src="./Student3.png" alt="Student 3">
         <h2>Mullaikani</h2>
         <p>I.C.E college</p>
         <p>Tap-Academy is the best e-learning platform. 
@@ -102,7 +102,7 @@
 </div>
 <div class="container1">
     <div class="box">
-        <img src="./student4.png" alt="Student 1">
+        <img src="./Student4.png" alt="Student 1">
         <h2>Jeevan</h2>
         <p>Tap Academy Student</p>
         <p>I think a Tap Academy is doing great using latest technologies
@@ -112,7 +112,7 @@
             TAP Academy is giving Quality Education at affordable Price..</p>
     </div>
     <div class="box">
-        <img src="./student5.png" alt="Student 2">
+        <img src="./Student5.png" alt="Student 2">
         <h2>Karthikeyan R</h2>
         <p>The Oxford College of Engineering</p>
         <p> My Experience in Tap Academy is so unique that the Academy made 
